# tangerine

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  channels.scm  configure  csg.rkt  csgst.rkt  csgst_glsl.rkt  csgst_processing.rkt  guix.scm  headless_test.py  main.zuo  package.bat  regen.bat  regen.sh  renderer.rkt  sdf.rkt  tangerine.rkt  test-shape.rkt  vec.rkt
backend/: backend.cpp  backend.h  errors.h  gl_boilerplate.cpp  gl_boilerplate.h
csg/: bounds.rkt  bpy-export.rkt  coalesce.rkt  csgst.rkt  glsl.rkt  vec.rkt
docs/: lua_api.md  racket_api.md
linux/: build.sh  build_majuscule.sh  build_miniscule.sh
linux/cmake/: FindLZ4.cmake  FindRacket.cmake  RacketParseConfigFile.cmake  script.cmake
materials/: black.glsl  blue.glsl  gray.glsl  green.glsl  red.glsl  white.glsl
models/: align.lua  align.rkt  basic_thing.lua  basic_thing.rkt  brick-spiral.rkt  bricks.rkt  clock.lua  color-cube.lua  color-cube.rkt  cones.lua  diffs.rkt  flower.lua  gear.lua  gear.rkt  init.lua  mailbox.rkt  materials.lua  paint.lua  queries.lua  scale.lua  seaside_town.lua  shapes.lua  shapes.rkt  shell.lua  smol-lang-test.rkt  spiral.lua  spiral.rkt  spline.rkt  stencils.lua  step-pyramid.rkt  tiles.rkt  wedges.rkt  wheel.lua  wheel.rkt  windows.rkt
package/: info.rkt
package/tangerine/: color-names.rkt  csgst.rkt  eval.rkt  export.rkt  ffi.rkt  info.rkt  main.rkt  profiling.rkt  smol.rkt  vec.rkt  voxel-compiler.rkt
package/tangerine-x86_64-linux/: info.rkt
package/tangerine-x86_64-win32/: info.rkt
racket/: petite.boot  scheme.boot
racket/etc/: config.rktd
shaders/: bg.fs.glsl  cluster_coverage.fs.glsl  cluster_coverage.vs.glsl  cluster_cull.cs.glsl  cluster_draw.fs.glsl  cluster_draw.vs.glsl  cluster_setup.cs.glsl  cluster_tally.cs.glsl  cube.fs.glsl  cube.vs.glsl  defines.h  gather_depth.cs.glsl  interpreter.glsl  masked.vs.glsl  math.glsl  noise.fs.glsl  nosignal.fs.glsl  octree_debug.fs.glsl  outliner.fs.glsl  resolve.fs.glsl  resolve_stencil.fs.glsl  sodapop.fs.glsl  sodapop.vs.glsl  splat.vs.glsl  test.fs.glsl  test.vs.glsl  tile_heap.glsl  voxel_cull.cs.glsl
shaders/sodapop/: yolo.fs.glsl  yolo.vs.glsl
tangerine/: .dir-locals.el  aabb.cpp  aabb.h  bounds-compiler.rkt  bounds.rkt  bpy-export.rkt  c_sdf.cpp  coalesce.rkt  colors.cpp  colors.h  compiler-common.rkt  controller.cpp  controller.h  csgst.rkt  embedding.h  errors.cpp  errors.h  eval.rkt  events.cpp  events.h  export.cpp  export.h  extern.h  gl_async.cpp  gl_async.h  gl_boilerplate.cpp  gl_boilerplate.h  gl_debug.cpp  gl_debug.h  gl_init.cpp  gl_init.h  glm_common.h  glsl.rkt  hephaestus.cpp  hephaestus.h  installation.cpp  installation.h  license_page.cpp  license_page.h  lights.cpp  (+68 more)
tangerine/psmove/: psmove.h
tangerine/rmlui/: rmlui_renderer_gl3.cpp
windows/: headless.vcxproj  headless.vcxproj.filters  packages.config  resource.h  tangerine.aps  tangerine.rc  tangerine.sln  tangerine.vcxproj  tangerine.vcxproj.filters
